# fortuned

./: README.MD  app.py  fortunes.txt  pyproject.toml  writer.py
fortuned/: app.py  fortunes.txt
fortuned/templates/: index.html
