[project]
name = "fortuned"
version = "1.0.2"
description = "A fortune teller that doesn't really tell you your fortune."
readme = "README.md"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
fortuned = "fortuned.app"

[project.scripts]
fortuned = "flask run --app fortuned.app"
